fix(backend): Gemini 응답이 비어 있을 때 NPE 방지
candidates.getFirst().content().parts().getFirst() 체인이 응답 어디든 비어 있으면
NoSuchElementException 으로 터지던 부분을 빈 문자열 반환으로 떨어뜨린다. 호출자
(GeminiLlmFeedbackGenerator) 가 이미 빈 응답을 fallback 문장으로 흡수하므로 흐름이
자연스럽게 이어진다.